Matrix resolving correctly

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,17 +45,17 @@
 
 
 # MCU name
-MCU = atmega328p
+MCU = attiny85
 
 
 # Fuse values
-L_FUSE = 0xFF
+L_FUSE = 0xF1
 H_FUSE = 0xDF
 E_FUSE = 0xFF
 
 
 # Processor frequency.
-F_CPU = 20000000
+F_CPU = 16000000
 
 
 # Output format. (can be srec, ihex, binary)
@@ -124,11 +124,8 @@ CSTANDARD = -std=gnu99
 
 # Place -D or -U options here for C sources
 CDEFS = -DF_CPU=$(F_CPU)UL
-CDEFS += -DTWI_SPEED=400
-CDEFS += -DBAUD=57600
-CDEFS += -DMAX_EVENT_RECORDS=8
-CDEFS += -DSPI_CLK_4
-CDEFS += -DBoard_Enterprise
+CDEFS += -DMAX_EVENT_RECORDS=4
+
 
 
 # Place -D or -U options here for ASM sources
@@ -279,7 +276,7 @@ LDFLAGS += $(LIBS)
 AVRDUDE_PROGRAMMER = stk500v2
 
 # com1 = serial port. Use lpt1 to connect to parallel port.
-AVRDUDE_PORT = com6    # programmer connected to serial device
+AVRDUDE_PORT = /dev/ttyACM0    # programmer connected to serial device
 
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
 #AVRDUDE_WRITE_EEPROM = -U eeprom:w:$(TARGET).eep
